2006-09-10 [colin]	2.4.0cvs169

	* src/gtk/gtksctree.c
		Fix recursive expansion via mouse
	* src/plugins/bogofilter/bogofilter.c
		Use normal filtering way of moving
		messages (batching), possibly fixing
		bug #1015 (Bogofilter plugin doubles 
		new messages)

2006-09-09 [wwp]	2.4.0cvs168

	* src/prefs_filtering.c
		better place for this fix.

2006-09-09 [wwp]	2.4.0cvs167

	* src/prefs_filtering.c
		fix a minor bug when the enabled status of a filtering/processing
		rule always got set to TRUE when replacing this rule. That still
		make sense when adding a new rule, but now when replacing, we
		don't override the value of 'enabled'.
		Also renamed the func prefs_filtering_list_view_get_rule_name()
		to prefs_filtering_list_view_get_info() as this function not only
		returns the name, but also the account_id and the enabled status.

2006-09-09 [mones]	2.4.0cvs166

	* manual/glossary.xml
	* manual/plugins.xml
		Minor format corrections
	* manual/gpl.xml
		Fix misplaced NO WARRANTY section
	* manual/es/advanced.xml
	* manual/es/faq.xml
	* manual/es/glossary.xml
	* manual/es/gpl.xml
	* manual/es/handling.xml
	* manual/es/plugins.xml
	* manual/es/starting.xml
		Incorporate changes from English version
	* manual/fr/ack.xml
	* manual/pl/ack.xml
	* manual/es/ack.xml
		Fix address, (add translation credits in es version)
	* po/es.po
		Updated translation

2006-09-09 [wwp]	2.4.0cvs165

	* src/prefs_filtering.c
		fix a crash when opening filtering prefs, if matcherrc file contains
		broken data (non-existing account id, which is theoretically not
		possible).

2006-09-08 [colin]	2.4.0cvs164

	* src/folder.c
		Wrong assert, make it an if()
	* src/gtk/gtksctree.c
		Fix bug #1013 (expand selected thread 
		tree) - expanding is now recursive

2006-09-07 [wwp]	2.4.0cvs163

	* src/prefs_matcher.c
		make better sentences about addressbook matching in the
		matcher prefs. This should make translators' work easier
		too.

2006-09-07 [wwp]	2.4.0cvs162

	* src/prefs_filtering.c